correigiendo las modifificaciones de bootstrap con la version terminada 1er trimestre

--- a/TrabajoDiuFin1erTrimestre/sites/comprar.html
+++ b/TrabajoDiuFin1erTrimestre/sites/comprar.html
@@ -53,22 +53,23 @@
 
 
   <main>
-    <div class="marco"></div>
+    <div class="marco">
+    </div>
     <div class="comprar">
       <div class="productos">
-        <img src="../img/imgBotellas/soutoDaFraga.jpg" alt="Souto da Fraga">
+        <img src="../img/imgConvertidas/soutoDaFraga.png" alt="Souto da Fraga">
         <h6>Souto da Fraga</h6>
         <p>10.50€</p>
         <button class="btnComprar">Comprar</button>
       </div>
       <div class="productos">
-        <img src="../img/imgBotellas/outeiroDaCruz.jpg" alt="Outeiro da Cruz">
+        <img src="../img/imgConvertidas/outeiroDaCruz.png" alt="Outeiro da Cruz">
         <h6>Outeiro da Cruz</h6>
         <p>9.50€</p>
         <button class="btnComprar">Comprar</button>
       </div>
       <div class="productos">
-        <img src="../img/imgBotellas/meigaDourada.jpg" alt="Meiga Dourada">
+        <img src="../img/imgConvertidas/meigaDourada.png" alt="Meiga Dourada">
         <h6>Meiga Dourada</h6>
         <p>15.90€</p>
         <button class="btnComprar">Comprar</button>
@@ -94,7 +95,7 @@
     </div>
 
     <div class="marco2">
-      <button id="btnprecios" onclick="showTable()">Tabla de precios</button>
+      <button id="btnprecios" onclick="showTable()" >Tabla de precios</button>
       <div class="precios">
         <table id="tprecios">
           <tr>
@@ -118,12 +119,13 @@
             <td>25€</td>
           </tr>
           <tr>
-            <td>Reserva Meiga Dourada</td>
+            <td>Gran Reserva Meiga Dourada</td>
             <td>45€</td>
           </tr>
         </table>
+   
       </div>
-    </div>
+
   </main>
   <footer>
     <ul class="piePagina">
